Address review comments.